--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,17 @@
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>CatMoney</title>
-  <meta name="title" content="Dream Agency" />
-  <meta name="description" content="We Help you to grow your Business" />
+  <meta name="title" content="CatMoney" />
+  <meta name="description" content="Hoomin...Catch the Red Dot, Win CheeSburgerz" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://dream-agency-seven.vercel.app/" />
-  <meta property="og:title" content="Dream Agency" />
-  <meta property="og:description" content="We Help you to grow your Business" />
+  <meta property="og:title" content="CatMoney" />
+  <meta property="og:description" content="Hoomin...Catch the Red Dot, Win CheeSburgerz" />
   <meta property="og:image" content="https://i.ibb.co/ZG30bZt/meta-image.webp" />
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://dream-agency-seven.vercel.app/" />
-  <meta property="twitter:title" content="Dream Agency" />
-  <meta property="twitter:description" content="We Help you to grow your Business" />
+  <meta property="twitter:title" content="CatMoney" />
+  <meta property="twitter:description" content="Hoomin...Catch the Red Dot, Win CheeSburgerz" />
   <meta property="twitter:image" content="https://i.ibb.co/ZG30bZt/meta-image.webp" />
 </head>
 
