meta image update

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,12 @@
   <meta property="og:url" content="https://dream-agency-seven.vercel.app/" />
   <meta property="og:title" content="CatMoney" />
   <meta property="og:description" content="Hoomin...Catch the Red Dot, Win CheeSburgerz" />
-  <meta property="og:image" content="https://i.ibb.co/ZG30bZt/meta-image.webp" />
+  <meta property="og:image" content="https://i.ibb.co/PQMQnP2/meta-image.webp" />
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://dream-agency-seven.vercel.app/" />
   <meta property="twitter:title" content="CatMoney" />
   <meta property="twitter:description" content="Hoomin...Catch the Red Dot, Win CheeSburgerz" />
-  <meta property="twitter:image" content="https://i.ibb.co/ZG30bZt/meta-image.webp" />
+  <meta property="twitter:image" content="https://i.ibb.co/PQMQnP2/meta-image.webp" />
 </head>
 
 <body>
